--- a/fundacao.html
+++ b/fundacao.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Fundação | Missão Servos</title>
+    <link rel="stylesheet" href="mobile.css">
     <link rel="stylesheet" href="fundacao.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
@@ -22,7 +23,8 @@
             </div>
 
             <div class="nav-links right">
-                <a href="#">missão</a>
+                <a href="sobre.html">Quem Somos</a>
+                <a href="eventos.html">Agenda e Eventos</a>
                 <a href="socio.html" class="btn-highlight">Ajude a Obra</a>
             </div>
         </nav>
@@ -85,8 +87,8 @@
         <div class="footer-container">
             
             <div class="footer-col brand-col">
-                <div class="footer-logo">ms.</div>
-                <p>Uma resposta de amor ao<br>mandato do Senhor.</p>
+                <div class="footer-logo">mises.</div>
+                <p>Anunciar o evangelho com alegria<br>para que Cristo seja tudo em todos.</p>
             </div>
 
             <div class="footer-col">
@@ -94,7 +96,7 @@
                 <ul>
                     <li><a href="sobre.html">Quem Somos</a></li>
                     <li><a href="fundacao.html">Fundadores</a></li>
-                    <li><a href="carisma.html">Carisma</a></li>
+                    <li><a href="sobre.html">Carisma</a></li>
                 </ul>
             </div>
 
@@ -102,24 +104,24 @@
                 <h4>Participe</h4>
                 <ul>
                     <li><a href="eventos.html">Eventos</a></li>
-                    <li><a href="vocacional.html">Vocacional</a></li>
-                    <li><a href="benfeitor.html">Seja Benfeitor</a></li>
+                    <li><a href="caminho.html">Caminho de São José</a></li>
+                    <li><a href="socio.html">Seja Benfeitor</a></li>
                 </ul>
             </div>
 
             <div class="footer-col">
                 <h4>Fale Conosco</h4>
                 <ul class="contact-list">
-                    <li><i class="fa-brands fa-whatsapp"></i> (00) 99999-9999</li>
-                    <li><i class="fa-regular fa-envelope"></i> contato@missaoservos.com</li>
+                    <li><i class="fa-brands fa-whatsapp"></i> (65) 99223-7716</li>
+                    <li><i class="fa-regular fa-envelope"></i> missaoservosdoespiritosanto@gmail.com</li>
                 </ul>
             </div>
 
         </div>
 
         <div class="footer-bottom">
-            <p>© 2024 Missão Servos. Todos os direitos reservados.</p>
-            <p>Deus Proverá.</p>
+            <p>© 2026 Missão Servos. Todos os direitos reservados.</p>
+            <p>Deus provê Deus Proverá.</p>
         </div>
     </footer>
 
