--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
         <article class="card card-tall">
           <div
             class="bg-image"
-            style="background-image: url('/img/download.jpg')"
+            style="background-image: url('./img/download.jpg')"
           ></div>
           <div class="card-content">
             <span class="tag">Passos de conversão</span>
