--- a/fundacao.html
+++ b/fundacao.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Fundação | Missão Servos</title>
+    <title>Fundação</title>
     <link rel="stylesheet" href="mobile.css">
     <link rel="stylesheet" href="fundacao.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
