mobile vou mexer

--- a/sobre.html
+++ b/sobre.html
@@ -153,7 +153,7 @@
         </div>
     </div>
 
-    <img src="./img/474681101_559052000174615_3178123183580917151_n-removebg-preview.png" alt="Terceiro Elo" class="life-img">
+    <img src="./img/ariel terceiro elo.png" alt="Terceiro Elo" class="life-img">
 
 </div>
 
