--- a/caminho.html
+++ b/caminho.html
@@ -205,13 +205,13 @@
     
     <div class="banner-content">
         <div class="banner-text">
-            <span class="banner-tag closed-tag">Inscrições Encerradas</span>
+            <span class="banner-tag closed-tag">Inscrições em Breve</span>
             <h2>Próxima Saída: <span style="color: var(--yellow);">01 de Maio</span></h2>
-            <p>As vagas para esta edição já foram preenchidas. <br> Fique atento às próximas datas.</p>
+            <p>As vagas para a proxima edição estarão dinponíveis em breve. <br> Fique atento às próximas datas.</p>
         </div>
         <div class="banner-action">
             <a href="#" class="btn-cta-giant closed">
-                VAGAS ESGOTADAS <i class="fa-solid fa-lock"></i>
+                EM BREVE <i class="fa-solid fa-lock"></i>
             </a>
         </div>
     </div>
