--- a/fundacao.html
+++ b/fundacao.html
@@ -6,7 +6,10 @@
     <title>Fundação</title>
     <link rel="stylesheet" href="mobile.css">
     <link rel="stylesheet" href="fundacao.css">
+    <link rel="stylesheet" href="zom.css">
+    <link rel="shortcut icon" href="./img/download-removebg-preview.png" type="image/png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+
 </head>
 <body>
 
@@ -22,11 +25,17 @@
                 <img src="./img/download-removebg-preview.png" alt="Logo">
             </div>
 
+
+            
+
             <div class="nav-links right">
                 <a href="sobre.html">Quem Somos</a>
                 <a href="eventos.html">Agenda e Eventos</a>
                 <a href="socio.html" class="btn-highlight">Ajude a Obra</a>
             </div>
+            <button class="hamburger-menu">
+                <i class="fa-solid fa-bars"></i>
+            </button>
         </nav>
 
 
@@ -53,29 +62,29 @@
                     <p class="quote-small">“Um pequeno vaso que parece não comportar tamanha graça.”</p>
                 </div>
                 <div class="profile-img-box">
-                    <img src="./img/download-removebg-preview (5).png" class="profile-img" alt="Robson">
+                    <img src="./img/robson milaho fund.png" class="profile-img" alt="Robson">
                 </div>
             </article>
 
-            <article class="card-profile bg-black animate-on-scroll delay-2">
+            <article class="card-profile bg-white  animate-on-scroll delay-2">
                 <div class="profile-info">
                     <span class="role-pill">Cofundadora</span>
                     <h2>Irany<br>Cruz</h2>
                     <p class="quote-small">“Ajuda adequada nos momentos de decisão. O sim materno.”</p>
                 </div>
                 <div class="profile-img-box">
-                    <img src="./img/irany_2-removebg-preview.png" class="profile-img" alt="Irany">
+                    <img src="./img/irany cruz.png" class="profile-img" alt="Irany">
                 </div>
             </article>
 
-            <article class="card-profile bg-white animate-on-scroll delay-3">
+            <article class="card-profile bg-black animate-on-scroll delay-3">
                 <div class="profile-info">
                     <span class="role-pill">Cofundadora</span>
                     <h2>Dona<br>Cila</h2>
                     <p class="quote-small">“O silêncio da intercessão de uma mulher doada a Deus.”</p>
                 </div>
                 <div class="profile-img-box">
-                    <img src="./img/tarcila_2-removebg-preview.png" class="profile-img" alt="Cila">
+                    <img src="./img/tarila mialho 2.png" class="profile-img" alt="Cila">
                 </div>
             </article>
 
@@ -133,6 +142,6 @@
         }, { threshold: 0.1 });
         document.querySelectorAll('.animate-on-scroll').forEach(el => observer.observe(el));
     </script>
-
+<script src="nav.js"></script>
 </body>
 </html>
