--- a/hallel.html
+++ b/hallel.html
@@ -9,9 +9,11 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    
+    <link rel="shortcut icon" href="./img/download-removebg-preview.png" type="image/png">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="mobile.css">
     <link rel="stylesheet" href="hallel.css"> </head>
+    
 <body>
 
     <nav class="smart-nav" style="background: rgba(0,0,0,0.5); backdrop-filter: blur(5px); border:none;">
