--- a/obrigado.html
+++ b/obrigado.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./img/download-removebg-preview.png" type="image/png">
     <title>Mensagem Enviada</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="mobile.css">
