--- a/socio.html
+++ b/socio.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Seja Benfeitor</title>
-    
+    <link rel="stylesheet" href="zom.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-    
+    <link rel="shortcut icon" href="./img/download-removebg-preview.png" type="image/png">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="socio.css">
     <link rel="stylesheet" href="mobile.css">
@@ -29,6 +29,12 @@
         <div class="nav-brand">
             <img src="./img/download-removebg-preview.png" alt="Logo">
         </div>
+
+        <button class="hamburger-menu">
+                <i class="fa-solid fa-bars"></i>
+            </button>
+
+
         <div class="nav-links right">
             <a href="sobre.html">Quem Somos</a>
             <a href="eventos.html">Agenda e Eventos</a>
@@ -304,5 +310,6 @@
         input.value = v.substring(0, 9);
     }
     </script>
+    <script src="nav.js"></script>
 </body>
 </html>
