--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <div class="bg-image" style="background-image: url('./img/retiros.png');"></div>
         <div class="card-content">
             <span class="tag">Espaço para Retiros</span>
-            <h1>FAÇA o seu RETIRO <br> <span class="text-yellow">na MISSÃO.</span></h1>
+            <h1>FAÇA o seu RETIRO <br> <span class="text-yellow">na CONOSCO.</span></h1>
             <p>Ambiente de silêncio, oração e estrutura completa para sua comunidade ou paróquia.</p>
             <a href="cessao.html" class="btn-black-action">
                 Saiba Mais <i class="fa-solid fa-arrow-right" style="color: var(--yellow);"></i>
